bridge/base/api-deployment.yaml
#! api-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: api
    namespace: rodaid-final-real
    labels:
        com.docker.compose.project: rodaid-final-real
        com.docker.compose.service: api
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: rodaid-final-real
            com.docker.compose.service: api
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: rodaid-final-real
                com.docker.compose.service: api
                com.docker.compose.network.default: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: rodaid-api
                  image: rodaid-final-real-api
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: api-3001
                      containerPort: 3001
