bridge/base/redis-deployment.yaml
#! redis-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: redis
    namespace: rodaid-final-real
    labels:
        com.docker.compose.project: rodaid-final-real
        com.docker.compose.service: redis
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: rodaid-final-real
            com.docker.compose.service: redis
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: rodaid-final-real
                com.docker.compose.service: redis
                com.docker.compose.network.default: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: rodaid-redis
                  image: redis:7-alpine
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: redis-6379
                      containerPort: 6379
