bridge/base/api-expose.yaml
#! api-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: api
    namespace: rodaid-final-real
    labels:
        com.docker.compose.project: rodaid-final-real
        com.docker.compose.service: api
spec:
    selector:
        com.docker.compose.project: rodaid-final-real
        com.docker.compose.service: api
    ports:
        - name: api-3001
          port: 3001
          targetPort: api-3001
